[package]
name = "rustMCU"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
cortex-m-semihosting = "0.5"
rtt-target = "0.6.1"
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f407"] } 
stm32f4 = { version = "0.15.1", features = ["stm32f407"]}
